# construction-project-data-warehouse

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-snowflake.txt  requirements.txt
.github/workflows/: ci.yml
config/: settings.yaml
data/processed/: quality_metrics.json
data/raw/: contractors.csv  daily_progress.csv  equipment.csv  equipment_usage.csv  materials.csv  project_costs.csv  projects.csv  safety_incidents.csv  sites.csv  workers.csv
docker/: Dockerfile
docs/: architecture.md  data_dictionary.md  data_model.md  etl_workflow.md  power_bi_guide.md  resume_bullets.md  screenshots.md  snowflake_architecture.md
sql/: 01_schema.sql  02_views.sql  03_quality_checks.sql
sql/snowflake/: 01_schema.sql  02_views.sql
src/: __init__.py  config.py  generate_data.py  logging_config.py  pipeline.py
src/extract/: __init__.py  extractor.py
src/load/: __init__.py  loader.py  snowflake_loader.py
src/quality/: __init__.py  framework.py
src/transform/: __init__.py  transformer.py
tests/: conftest.py  test_config.py  test_extract.py  test_generated_data.py  test_integration_postgres.py  test_loader.py  test_logging.py  test_quality.py  test_snowflake_loader.py  test_transform.py
